<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
        <Button
                android:text="@string/slot1_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slot1_button" app:layout_constraintEnd_toStartOf="@+id/slot2_button"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBaseline_toBaselineOf="@+id/slot2_button" style="@style/BT_slot"/>
        <Button
                android:text="@string/slot2_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slot2_button" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.095"
                app:layout_constraintStart_toEndOf="@+id/slot1_button" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/slot3_button" style="@style/BT_slot"/>
        <Button
                android:text="@string/slot3_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slot3_button"
                app:layout_constraintStart_toEndOf="@+id/slot2_button" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/slot2_button"
                style="@style/BT_slot"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText"
                app:layout_constraintBottom_toTopOf="@+id/editText2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="50dp" app:layout_constraintHorizontal_bias="1.0" android:hint="@string/license"
                android:textAlignment="center" style="@style/textIntput" android:layout_marginTop="100dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintBottom_toTopOf="@+id/editText3"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="50dp"
                app:layout_constraintHorizontal_bias="0.0" android:hint="@string/name" android:textAlignment="center"
                style="@style/textIntput"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText3"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/editText2"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="50dp"
                app:layout_constraintHorizontal_bias="1.0" android:hint="@string/phone" android:textAlignment="center"
                style="@style/textIntput" android:layout_marginBottom="200dp"/>
        <Button
                android:text="@string/update_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/update_button"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/delete_button" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText3" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:background="#2196F3"/>
        <Button
                android:text="@string/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/delete_button" app:layout_constraintStart_toEndOf="@+id/update_button"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText3"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:background="#E91E63"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
